[gd_scene load_steps=2 format=3 uid="uid://co2gtkorldd8j"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/SprinklerPropertyEditor/SprinklerPropertyEditor.gd" id="1_0j0oi"]

[node name="SprinklerPropertiesList" type="GridContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource("1_0j0oi")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Label: "

[node name="UserLabelLineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "User-definable label for this sprinkler"

[node name="Label4" type="Label" parent="."]
layout_mode = 2
text = "Manufacturer: "

[node name="ManufacturerOption" type="OptionButton" parent="."]
layout_mode = 2

[node name="Label5" type="Label" parent="."]
layout_mode = 2
text = "Model: "

[node name="ModelOption" type="OptionButton" parent="."]
layout_mode = 2

[node name="Label9" type="Label" parent="."]
layout_mode = 2
text = "Zone: "

[node name="ZoneSpinBox" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "User-definable label for this sprinkler"

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Sweep: "

[node name="SweepSpinBox" type="SpinBox" parent="."]
layout_mode = 2
tooltip_text = "Total spray angle or rotor's swept angle"
max_value = 360.0
suffix = "deg"

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Rotation: "

[node name="RotationSpinBox" type="SpinBox" parent="."]
layout_mode = 2
tooltip_text = "Angle sprinkler body"
min_value = -360.0
max_value = 360.0
suffix = "deg"

[node name="Label6" type="Label" parent="."]
modulate = Color(1, 0.188235, 0.215686, 1)
layout_mode = 2
text = "Min Distance: "

[node name="MinDistanceSpinBox" type="SpinBox" parent="."]
layout_mode = 2
suffix = "ft"

[node name="Label7" type="Label" parent="."]
modulate = Color(0.39, 1, 0.4205, 1)
layout_mode = 2
text = "Max Distance: "

[node name="MaxDistanceSpinBox" type="SpinBox" parent="."]
layout_mode = 2
suffix = "ft"

[node name="Label8" type="Label" parent="."]
layout_mode = 2
text = "Distance: "

[node name="DistanceSpinBox" type="SpinBox" parent="."]
layout_mode = 2
suffix = "ft"

[connection signal="text_submitted" from="UserLabelLineEdit" to="." method="_on_user_label_line_edit_text_submitted"]
[connection signal="item_selected" from="ManufacturerOption" to="." method="_on_manufacturer_option_item_selected"]
[connection signal="item_selected" from="ModelOption" to="." method="_on_model_option_item_selected"]
[connection signal="value_changed" from="ZoneSpinBox" to="." method="_on_zone_spin_box_value_changed"]
[connection signal="value_changed" from="SweepSpinBox" to="." method="_on_sweep_spin_box_value_changed"]
[connection signal="value_changed" from="RotationSpinBox" to="." method="_on_rotation_spin_box_value_changed"]
[connection signal="value_changed" from="MinDistanceSpinBox" to="." method="_on_min_distance_spin_box_value_changed"]
[connection signal="value_changed" from="MaxDistanceSpinBox" to="." method="_on_max_distance_spin_box_value_changed"]
[connection signal="value_changed" from="DistanceSpinBox" to="." method="_on_distance_spin_box_value_changed"]
